--- a/src/components/UIComponents/QuestCard/QuestCard.styles.css
+++ b/src/components/UIComponents/QuestCard/QuestCard.styles.css
@@ -1,14 +1,50 @@
 .quest-card {
-  border: 2px solid #3498db;
-  padding: 16px;
-  margin: 12px 0;
+  width: 100%;
+  border: 2px solid #ffffff;
+  padding: 8px;
+  width: 342px;
   background-color: #fff;
   display: flex;
-  flex-direction: column;
+  align-items: start;
+  gap: 8px;
 }
 
 .quest-card:hover {
-  transform: translateY(-2px);
+  border-color: #3498db;
 }
 
+.checkbox-area {
+  padding-right: 8px;
+}
 
+.card-content {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-description {
+  width: 100%;
+}
+
+.card-footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 768px) {
+  .quest-card {
+    width: 100%;
+    max-width: 470px;
+  }
+
+  .checkbox-area {
+    padding-right: 4px;
+  }
+}
