--- a/src/global.css
+++ b/src/global.css
@@ -16,8 +16,8 @@
   min-height: 100vh;
   --font-main: "Unifontex", monospace;
 
-  --success-color: #58f558;
-  --fail-color: #ff6767;
+  --success-color: #51ff51;
+  --fail-color: #ff4444;
 
   --daily-list-bg-color: #41679c;
   --weekly-list-bg-color: #e09a49;
@@ -34,3 +34,4 @@ body {
    padding: 8px;
   }
 }
+
