--- a/src/components/UIComponents/QuestComponents/QuestCard/QuestCard.styles.css
+++ b/src/components/UIComponents/QuestComponents/QuestCard/QuestCard.styles.css
@@ -6,6 +6,8 @@
   display: flex;
   align-items: start;
   gap: 8px;
+  position: relative;
+  overflow: visible;
 }
 
 .quest-card:hover {
@@ -51,6 +53,6 @@
 }
 
 .quest-card.status-completed {
-  background-color: #d4d4d4;
-  border-color: #c7c7c7;
+  background-color: #bbbbbb;
+  border-color: #bbbbbb;
 }
