refactor: architecture improvements

--- a/src/global.css
+++ b/src/global.css
@@ -20,7 +20,7 @@
   --fail-color: #ff4444;
 
   --daily-list-bg-color: #41679c;
-  --weekly-list-bg-color: #e09a49;
+  --weekly-list-bg-color: #ac5e1f;
 }
 
 body {
