--- a/src/components/Quest/QuestCardList/QuestCardList.styles.css
+++ b/src/components/Quest/QuestCardList/QuestCardList.styles.css
@@ -10,6 +10,12 @@
   z-index: 10;
 }
 
+.list-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 .list {
   display: flex;
   padding: 8px;
@@ -17,7 +23,7 @@
   gap: 8px;
   overflow-y: scroll;
   height: 440px;
-  border: 2px solid #ffffff;
+  border: 2px solid var(--white);
   background-color: var(--quest-bg-color);
 }
 
@@ -27,8 +33,7 @@
 }
 
 .list::-webkit-scrollbar-thumb {
-  background: #000000;
-  border: 2px solid #fff;
+  background: var(--white);
 }
 
 .list::-webkit-scrollbar-track {
