--- a/src/components/Profile/ProfileCard/ProfileCard.styles.css
+++ b/src/components/Profile/ProfileCard/ProfileCard.styles.css
@@ -30,16 +30,20 @@
   gap: 4px;
 }
 
+.level-label {
+  margin-right: 8px;
+}
+
 .footer {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  gap: 4px
+  gap: 4px;
 }
 
 .buffs-wrapper {
   display: flex;
-  gap: 4px
+  gap: 4px;
 }
 
 .buff-icon {
@@ -52,5 +56,8 @@
   align-content: end;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 300px) {
+  .photo-wrapper {
+    display: none;
+  }
 }
