feat: testing modal implementation using zustand store

--- a/src/global.css
+++ b/src/global.css
@@ -20,7 +20,7 @@
   --fail-color: #ff4444;
 
   --white: #f7f7f7;
-  --black: #242424;
+  --black: #1d1d1d;
   --light-gray: #a1a1a1;
 
   --daily-list-bg-color: #41679c;
