--- a/src/components/Modal/Modal.styles.css
+++ b/src/components/Modal/Modal.styles.css
@@ -18,7 +18,7 @@
 
 
 
-.header {
+.modal-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -38,7 +38,7 @@
   padding: 16px 0
 }
 
-.footer {
+.modal-footer {
   display: flex;
   justify-content: center;
   margin-top: 8px;
