--- a/src/components/Modal/Modal.styles.css
+++ b/src/components/Modal/Modal.styles.css
@@ -11,35 +11,46 @@
   background: var(--black);
   border: 2px solid var(--white);
   padding: 12px;
-  width: 360px;
+  width: 420px;
   font-family: "Press Start 2P", monospace;
   box-shadow: 8px 8px 0 #000;
 }
-
-
 
 .modal-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid var(--white);
-  padding-bottom: 8px;
+  padding-bottom: 10px;
 }
 
-.close-btn {
+.modal-close-btn {
   font-size: 14px;
-  line-height: 14px;
   padding: 2px 6px;
   cursor: pointer;
 }
 
 .modal-content {
   font-size: 10px;
-  padding: 16px 0
+  padding: 16px 0;
 }
 
 .modal-footer {
   display: flex;
   justify-content: center;
   margin-top: 8px;
+}
+
+@media (max-width: 480px) {
+  .modal {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border: none;
+    border-top: 2px solid var(--white);
+  }
+  .modal-footer {
+    margin-top: 16px;
+  }
 }
