feat: creating basic navbar and responsive adjustments

--- a/src/components/Profile/ProfileCard/ProfileCard.styles.css
+++ b/src/components/Profile/ProfileCard/ProfileCard.styles.css
@@ -6,6 +6,12 @@
   background-color: var(--white);
 }
 
+@media (max-width: 768px) {
+  .profile-card {
+    width: 100%;
+  }
+}
+
 .card-content {
   display: flex;
   width: 100%;
