--- a/src/components/Navbar/Navbar.styles.css
+++ b/src/components/Navbar/Navbar.styles.css
@@ -17,6 +17,10 @@
   background: var(--bg-primary);
 }
 
+.icon-fix-hood {
+  transform: translateY(2px);
+}
+
 @media (max-width: 768px) {
   .navbar {
     position: fixed;
@@ -32,10 +36,10 @@
     justify-content: center;
     padding: 12px;
     border: none;
-    color: #ffffff;
+    color: #c9c9c9;
   }
   .navbar-item.active {
     background: var(--bg-primary);
-    color: #afff9f;
+    color: #ffffff;
   }
 }
