--- a/src/components/Quest/QuestCardList/QuestCardList.styles.css
+++ b/src/components/Quest/QuestCardList/QuestCardList.styles.css
@@ -22,7 +22,8 @@
   flex-direction: column;
   gap: 8px;
   overflow-y: scroll;
-  height: 420px;
+  height: 400px;
+  width: 348px;
   border: 2px solid var(--white);
   background-color: var(--quest-bg-color);
 }
@@ -51,7 +52,7 @@
 
 @media (max-width: 768px) {
   .list {
-    height: 340px;
+    height: 300px;
     width: 100%;
   }
 }
