--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,3 @@
-@import "@joacod/pixel-ui/components";
-@import "@joacod/pixel-ui/font";
-
 @font-face {
   font-family: "Unifontex";
   src: url("/src/assets/fonts/UnifontExMono.ttf") format("truetype");
@@ -28,8 +25,27 @@
   --card-title: #3b3b3bff;
 }
 
+html,
 body {
   background-color: var(--bg-primary);
   font-family: var(--font-main);
   color: var(--text-primary);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+p,
+span,
+a {
+  margin: 0;
+  color: inherit;
+  text-decoration: none;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
