--- a/src/pages/Home/Home.styles.css
+++ b/src/pages/Home/Home.styles.css
@@ -1,3 +1,10 @@
+.home-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
 .header {
   width: 100%;
 }
@@ -7,7 +14,7 @@
   flex-direction: row;
   justify-content: start;
   width: 100%;
-  gap: 16px
+  gap: 16px;
 }
 
 @media (max-width: 768px) {
