--- a/src/components/Modal/Modal.styles.css
+++ b/src/components/Modal/Modal.styles.css
@@ -23,10 +23,8 @@
   padding-bottom: 10px;
 }
 
-.modal-close-btn {
-  font-size: 14px;
-  padding: 2px 6px;
-  cursor: pointer;
+.modal-header .close-button {
+  margin-top: -8px;
 }
 
 .modal-content {
