--- a/src/components/Generic/Button/Button.styles.css
+++ b/src/components/Generic/Button/Button.styles.css
@@ -58,12 +58,12 @@
 }
 .button[data-size="sm"] {
   --btn-font-size: var(--text-sm);
-  --btn-padding: 4px 12px;
+  --btn-padding: 6px 12px;
   --btn-shadow-size: 1px;
 }
 .button[data-size="md"] {
   --btn-font-size: var(--text-md);
-  --btn-padding: 4px 16px;
+  --btn-padding: 8px 16px;
   --btn-shadow-size: 2px;
 }
 .button[data-size="lg"] {
@@ -79,7 +79,7 @@
 
   --btn-bg-default: #000000;
   --btn-bg-primary: #1d71d1;
-  --btn-bg-success: #3dc933;
+  --btn-bg-success: #0d7905;
   --btn-bg-danger: #b93a3a;
 
   --btn-border-size: 2px;
