--- a/src/components/Generic/Select/Select.styles.css
+++ b/src/components/Generic/Select/Select.styles.css
@@ -22,9 +22,10 @@
 }
 
 .select-input-error {
-  font-size: 11px;
-  margin-top: 4px;
+  font-size: 14px;
   color: var(--fail-color);
+  margin-left: 1px;
+  margin-top: -4px;
 }
 
 .quest-input-error::before {
