--- a/src/components/Quest/QuestCardList/QuestCardList.styles.css
+++ b/src/components/Quest/QuestCardList/QuestCardList.styles.css
@@ -13,7 +13,10 @@
 .list-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+}
+
+.list-title {
+  margin-bottom: 8px;
 }
 
 .list {
@@ -25,7 +28,7 @@
   height: 400px;
   width: 348px;
   border: 2px solid var(--white);
-  background-color: var(--quest-bg-color);
+  background-color: var(--list-bg-color);
 }
 
 .list::-webkit-scrollbar {
@@ -38,7 +41,7 @@
 }
 
 .list::-webkit-scrollbar-track {
-  background: var(--quest-bg-color);
+  background: var(--list-bg-color);
   border: none;
   border-left: 2px solid #fff;
 }
@@ -49,7 +52,7 @@
 
 @media (max-width: 768px) {
   .list {
-    height: 300px;
+    height:340px;
     width: 100%;
   }
 }
