--- a/src/global.css
+++ b/src/global.css
@@ -15,6 +15,10 @@
   --white: #f7f7f7;
   --black: #1d1d1d;
   --light-gray: #b1b1b1;
+
+  --sonner-bg: #000;
+  --sonner-text: #00ff88;
+  --sonner-border: #00ff88;
 }
 
 html,
@@ -43,4 +47,14 @@ button {
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+[data-sonner-toast] {
+  border-radius: 0 !important;
+  background: #ffffff !important;
+  font-size: 14px !important;
+  color: #000000 !important;
+  border: 3px solid #000000 !important;
+  padding: 12px !important;
+  font-family: "Unifontex", monospace;
 }
