--- a/src/components/Quest/QuestCard/QuestCard.styles.css
+++ b/src/components/Quest/QuestCard/QuestCard.styles.css
@@ -1,8 +1,8 @@
 .quest-card {
-  border: 2px solid var(--white);
+  border: 2px solid #f5f2fb;
   padding: 8px;
   width: 100%;
-  background-color: var(--white);
+  background-color: #faf6f4;
   display: flex;
   align-items: start;
   gap: 8px;
@@ -58,8 +58,13 @@
   border-color: var(--light-gray);
 }
 
+.quest-card.daily-quest {
+  border-left: 4px solid rgb(97, 165, 255);
+}
+
 @media (max-width: 768px) {
   .checkbox-area {
     padding-right: 4px;
   }
 }
+
