--- a/src/components/Profile/AchievementsCard/AchievementsCard.styles.css
+++ b/src/components/Profile/AchievementsCard/AchievementsCard.styles.css
@@ -8,4 +8,9 @@
   height: auto;
   width: 140px;
   background-color: var(--white);
+  cursor: pointer;
+}
+
+.achievements-card:hover {
+  border: 1px solid black;
 }
